# scheduled-services

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  env.example-main.yml  inventory.yml  playbook.main.yaml  pyproject.toml
common/helpers/: __init__.py  ai.py  log.py  telegram.py
docs/plans/: 2026-04-01-refactor-skills-to-scheduled-services.md  2026-04-03-refactor-playbook-extract-inline-scripts.md  2026-04-03-teams-summary-service.md
docs/plans/completed/: 2026-04-01-refactor-skills-to-scheduled-services.md  2026-04-03-refactor-playbook-extract-inline-scripts.md  2026-04-03-teams-summary-service.md
scripts/: install_crontab.py  install_launchd.py  migrate.sh  write_configs.py
services/news-digest/: fetch_feeds.py  news_digest.py
services/pr-auto-approve/: .bindeps  pr_auto_approve.py
services/slack-summary/: .bindeps  slack_summary.py
services/teams-summary/: teams_summary.py
templates/: launchd.plist.tpl
